# python-video-organizer

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  main.py  pyproject.toml
tests/: test_cli.py  test_config.py  test_duplicates.py  test_mover.py  test_scanner.py
video_organizer/: __init__.py  cli.py  config.py  duplicates.py  hashing.py  metadata.py  mover.py  scanner.py  short_videos.py
