[project]
name = "video-organizer"
version = "0.1.0"
description = "Scans a video library for duplicates and short clips, and organizes them into review folders."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
    "imagehash>=4.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
video-organizer = "video_organizer.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["video_organizer*"]
